--- a/index.html
+++ b/index.html
@@ -5,8 +5,341 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="navigation-logo">
+          <img class="logo" src="" width="145" height="36" alt="Логотип интернет-магазина Девайс"></a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+          <ul class="navigation-user">
+        <ul class="navigation-user">
+          <li class="navigation-item">
+            <form class="navigation-form" action="https://echo.htmlacademy.ru/" method="post">
+              <p class="navigation-form-search">
+                <label class="visually-hidden" for="navigation-search">Поиск</label>
+                <input type="text" id="navigation-search" name="navigation-search" placeholder="Поиск по сайту">
+              </p>
+              <button class="button" type="submit">Найти</button>
+            </form>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Войти</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Сравнить</a>
+          </li>
+          <li class="navigation-item">
+            <span class="products-number">2</span>
+            <a class="navigation-link" href="basket.html">Корзина</a>
+          </li>
+        </ul>
+
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Коталог товаров</a>
+            <div></div>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#services">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#services">Гарантия</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Интернет-магазин "Device"</h1>
+
+
+      <section class="quadrocopter-photo">
+            <h2 class="visually-hidden">Квадрокоптер</h2>
+          <img class="slider-quadrocopter-photo" src="" alt="Квадрокоптер">
+          <button class="slider-button slider-prev" type="button">
+            <span class="visually-hidden">Предыдущее фото</span>
+          </button>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующее фото</span>
+          </button>
+          <b>Порхает как бабочка,<br>жалит как пчела!</b>
+          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+          </p>
+          <a class="quadrocopter-link" href="#">Подробнее</a>
+          <table>
+            <tr>
+              <td>800 м</td>
+              <td>Дальность полета</td>
+            </tr>
+            <tr>
+              <td>50 м</td>
+              <td>Радиус поражения</td>
+            </tr>
+          </table>
+
+          <h2 class="visually-hidden">Фитнес браслет</h2>
+          <img class="slider-fitness-bracelet-photo" src="" alt="Фитнес браслет">
+          <button class="slider-button slider-prev" type="button">
+            <span class="visually-hidden">Предыдущее фото</span>
+          </button>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующее фото</span>
+          </button>
+          <b>Худеем<br>правильно!</b>
+          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+          </p>
+          <a class="fitness-bracelet-link" href="#">Подробнее</a>
+          <table>
+            <tr>
+              <td>48 часов</td>
+              <td>Без подзарядки</td>
+            </tr>
+          </table>
+
+          <h2 class="visually-hidden">Палка для селфи</h2>
+          <img class="slider-selfie-stick-photo" src="" alt="Палка для селфи">
+          <button class="slider-button slider-prev" type="button">
+            <span class="visually-hidden">Предыдущее фото</span>
+          </button>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующее фото</span>
+          </button>
+          <b>Делай селфи,<br>как Бен Стиллер! </b>
+          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+          </p>
+          <a class="quadrocopter-link" href="#">Подробнее</a>
+          <table>
+            <tr>
+              <td>8,5 м</td>
+              <td>Длина палки</td>
+            </tr>
+            <tr>
+              <td>5 кг</td>
+              <td>Вес палки</td>
+            </tr>
+            <tr>
+              <td>Карбон</td>
+              <td>Материал</td>
+            </tr>
+          </table>
+
+          <ol class="slider-pagination">
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">1 фото</span>
+              </button>
+            </li>
+
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">2 фото</span>
+              </button>
+            </li>
+
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">3 фото</span>
+              </button>
+            </li>
+          </ol>
+        </section>
+
+
+
+      <section class="products">
+        <h2 class="visually-hidden">Продукты</h2>
+        <ul class="products-list">
+          <li class="products-item">
+            <figure>
+            <a href="#">
+          <img class="virtual-reality" src="" alt="Виртуальная реальность" width="160" height="160"></a>
+          <figcaption>Виртуальная реальность</figcaption>
+        </figure>
+         </li>
+         <li class="products-item">
+          <figure>
+            <a href="monopods-for-selfies.device">
+          <img class="monopods-for-selfies" src="" alt="Моноподы для селфи" width="160" height="160"></a>
+          <figcaption>Моноподы для селфи</figcaption>
+        </figure>
+         </li>
+         <li class="products-item">
+          <figure>
+            <a href="#">
+          <img class="action-cameras" src="" alt="Экшн-камеры" width="160" height="160"></a>
+          <figcaption>Экшн-камеры</figcaption>
+        </figure>
+         </li>
+         <li class="products-item">
+          <figure>
+            <a href="#">
+          <img class="fitness-bracelets" src="" alt="Фитнес-браслеты" width="160" height="160"></a>
+          <figcaption>Фитнес-браслеты</figcaption>
+        </figure>
+         </li>
+         <li class="products-item">
+          <figure>
+            <a href="#">
+          <img class="smart-watches" src="" alt="Умные часы" width="160" height="160"></a>
+          <figcaption>Умные часы</figcaption>
+        </figure>
+         </li>
+         <li class="products-item">
+          <figure>
+            <a href="#">
+          <img class="quadrocopters" src="" alt="Квадрокоптеры" width="160" height="160"></a>
+          <figcaption>Квадрокоптеры</figcaption>
+        </figure>
+         </li>
+        </ul>
+      </section>
+
+
+      <section class="services" id="services">
+        <h2 class="visually-hidden">Услуги</h2>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3 class="visually-hidden">Доставка</h3>
+          <button class="button" type="submit">Доставка</button>
+          <p>Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно! Ведь<br>
+            мы неплохо заработаем, поднимая его на ваш этаж.</p>
+          <img class="delivery" src="" alt="Доставка">
+          </li>
+        <li class="services-item">
+            <h3 class="visually-hidden">Гарантия</h3>
+          <button class="button" type="submit">Гарантия</button>
+          <p>Если из-за возгорания купленного у нас товара у вас<br>
+            сгорит дом — не переживайте, мы выдадим вам новый.<br>
+            Товар, не дом, конечно же.</p>
+          <img class="garantee" src="" alt="Гарантия">
+        </li>
+        <li class="services-item">
+            <h3 class="visually-hidden">Кредит</h3>
+          <button class="button" type="submit">Кредит</button>
+          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+          <img class="credit" src="" alt="Кредит">
+        </li>
+      </ul>
+      </section>
+
+
+      <section class="special-delivery">
+        <h2 class="visually-hidden">Специальная доставка</h2>
+        <a class="button" href="special-delivery.html">Доставим редкий товар под заказ</a>
+      </section>
+
+
+      <section class="about-us">
+        <h2 class="about-us-title">О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.
+        </p>
+        <p>Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
+        <ul class="about-us-list">
+          <li class="about-us-item">
+            <b>Меловые линии</b>
+          </li>
+          <li class="about-us-item">
+            <b>СДИК</b>
+          </li>
+          <li class="about-us-item">
+            <b>ТоксБерри</b>
+          </li>
+        </ul>
+        <a class="button button-about-us" href="#">Подробнее о нас</a>
+      </section>
+
+
+      <section clas="contacts">
+        <h2 class="contacts-title">Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис.<br>
+          Заодно сможете проверить работоспособность покупки. </p>
+          <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
+           <address class="contacts-address">
+             <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+             <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
+            </address>
+          <h3 class="contacts-subtitle">Время работы</h3>
+           <ul class="contacts-schedule">
+            <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+            <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+           </ul>
+           <a class="button button-feedback" href="#">Напишите нам</a>
+      </section>
+
+
+      <section class="mailing">
+        <h2 class="visually-hidden">Рассылка</h2>
+        <b>Подпишитесь на рассылку</b>
+        <p>Еженедельный дайджест с обзорами новинок,<br>
+          длительными тест-драйвами, распаковками, а также акции,<br> спецпредложения и вот это вот всё.</p>
+        <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
+         <input type="text" name="mailing-e-mail" placeholder="Ваш e-mail">
+          <button class="button" type="submit">Подписаться</button>
+          <p>Это бесплатно</p>
+        </form>
+      </section>
+
+    </main>
+
+    <footer class="page-footer">
+      <img class="logo" src=""  width="145" height="36" alt="Логотип интернет-магазина Девайс">
+      <section class="footer-adress">
+          <h2 class="visually-hidden">Адрес</h2>
+          <address class="contacts-address">
+            <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+            </address>
+        </section>
+
+        <section class="footer-info">
+          <h2 class="visually-hidden">Информация</h2>
+          <ul class="info-list">
+            <li class="info-item">
+              <a class="info-link" href="#services">Доставка</a>
+            </li>
+            <li class="navigation-item">
+              <a class="info-link" href="#services">Гарантия</a>
+            </li>
+            <li class="navigation-item">
+              <a class="info-link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="footer-contacts-phone">
+          <h2 class="visually-hidden">Контактный телефон</h2>
+          <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
+        </section>
+
+        <section class="footer-social-network">
+          <h2 class="visually-hidden">Мы в соц сетях</h2>
+          <ul class="social-network-list">
+            <li class="social-network-list">
+              <h3 class="visually-hidden">Telegram</h3>
+          <a class="button" href="ttps://t.me/htmlacademy">
+            <img class="Telegram" src="" alt="социальная сеть Telegram" width="40" height="40"></a>
+            </li>
+            <li class="social-network-list">
+              <h3 class="visually-hidden">Youtube</h3>
+          <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <img class="Youtube" src="" alt="социальная сеть Youtube" width="40" height="40"></a>
+            </li>
+            <li class="social-network-list">
+              <h3 class="visually-hidden">Twitter</h3>
+          <a class="button" href=" https://twitter.com/htmlacademy_ru">
+            <img class="Twitter" src="" alt="социальная сеть Twitter" width="40" height="40"></a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="footer-developer's-logo">
+          <h2 class="visually-hidden">Логотип разработчика</h2>
+          <a href=" https://htmlacademy.ru">
+            <img class="developer's-logo" src="" alt="Логотип разработчика" width="115" height="33"></a>
+        </section>
+        </footer>
 
   </body>
 </html>
