added images, fixes index.html

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-        <img class="logo" src="" width="145" height="36" alt="Логотип интернет-магазина Девайс"></a>
+        <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс"></a>
 
         <ul class="navigation-user">
           <li class="navigation-item">
@@ -75,7 +75,7 @@
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
 
           <div class="slidecontainer">
-            <p>Цена</p>
+            <p class="price">Цена</p>
             <input type="range" min="0" max="7000" step="1" value="0" value="5000" id="range-price">
           </div>
 
@@ -163,7 +163,7 @@
         <ul class="product-list">
           <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="">
+            <img class="product-card-image" src="images/catalog (Avateur-selfie-stick).jpg" alt="Любительская селфи-палка" width="360" height="380">
             <h3 class="product-card-title">Любительская селфи-палка</h3>
           </a>
           <b class="product-card-price">500 ₽</b>
@@ -172,7 +172,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="">
+            <img class="product-card-image" src="images/catalog (professional-selfie-stick).jpg" alt="Профессиональная селфи-палка" width="360" height="380">
             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
           </a>
           <b class="product-card-price">1 500 ₽</b>
@@ -181,7 +181,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="">
+            <img class="product-card-image" src="images/catalog (unsinkable-selfie-stick).jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
             <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
           </a>
           <b class="product-card-price">2 500 ₽</b>
@@ -190,7 +190,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="">
+            <img class="product-card-image" src="images/catalog (follow-me-selfie-stick).jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
           </a>
           <b class="product-card-price">1 500 ₽</b>
@@ -235,11 +235,11 @@
 
 
   <footer class="page-footer">
-    <img class="logo" src="" width="145" height="36" alt="Логотип интернет-магазина Девайс">
+    <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс">
     <section class="footer-adress">
         <h2 class="visually-hidden">Адрес</h2>
         <address class="contacts-address">
-          <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <p lass="address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
       </section>
 
@@ -287,7 +287,7 @@
       <section class="footer-developer's-logo">
         <h2 class="visually-hidden">Логотип разработчика</h2>
         <a href=" https://htmlacademy.ru">
-          <img class="developer's-logo" src="" alt="Логотип разработчика" width="115" height="33"></a>
+          <img class="developer's-logo" src="images/logo (.html-academy).svg" alt="Логотип разработчика" width="115" height="33"></a>
       </section>
       </footer>
 
