--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo">
-          <img class="logo" src="" width="145" height="36" alt="Логотип интернет-магазина Девайс"></a>
+          <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс"></a>
 
           <ul class="navigation-user">
         <ul class="navigation-user">
@@ -55,17 +55,23 @@
       <h1 class="visually-hidden">Интернет-магазин "Device"</h1>
 
 
-      <section class="quadrocopter-photo">
-            <h2 class="visually-hidden">Квадрокоптер</h2>
-          <img class="slider-quadrocopter-photo" src="" alt="Квадрокоптер">
+      <section class="new">
+            <h2 class="visually-hidden">Новинки</h2>
           <button class="slider-button slider-prev" type="button">
             <span class="visually-hidden">Предыдущее фото</span>
           </button>
           <button class="slider-button slider-next" type="button">
             <span class="visually-hidden">Следующее фото</span>
           </button>
-          <b>Порхает как бабочка,<br>жалит как пчела!</b>
-          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+
+          <ol class="slider-pagination">
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">Квадрокоптер</span>
+              </button>
+              <img class="slider-image" src="images/slider-1 (quadrocopter).png" alt="Квадрокоптер" width="560" height="560">
+                <b class="quadrocopter">Порхает как бабочка,<br>жалит как пчела!</b>
+          <p class="quadrocopter">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
           </p>
           <a class="quadrocopter-link" href="#">Подробнее</a>
           <table>
@@ -78,17 +84,15 @@
               <td>Радиус поражения</td>
             </tr>
           </table>
+            </li>
 
-          <h2 class="visually-hidden">Фитнес браслет</h2>
-          <img class="slider-fitness-bracelet-photo" src="" alt="Фитнес браслет">
-          <button class="slider-button slider-prev" type="button">
-            <span class="visually-hidden">Предыдущее фото</span>
-          </button>
-          <button class="slider-button slider-next" type="button">
-            <span class="visually-hidden">Следующее фото</span>
-          </button>
-          <b>Худеем<br>правильно!</b>
-          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">Фитнес-браслет</span>
+              </button>
+              <img class="slider-image" src="images/slider-2 (fitness-braselet).png" alt="Фитнес-браслет" width="560" height="560">
+              <b class="fitness-bracelet">Худеем<br>правильно!</b>
+          <p class="fitness-bracelet">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
           </p>
           <a class="fitness-bracelet-link" href="#">Подробнее</a>
           <table>
@@ -97,19 +101,17 @@
               <td>Без подзарядки</td>
             </tr>
           </table>
+            </li>
 
-          <h2 class="visually-hidden">Палка для селфи</h2>
-          <img class="slider-selfie-stick-photo" src="" alt="Палка для селфи">
-          <button class="slider-button slider-prev" type="button">
-            <span class="visually-hidden">Предыдущее фото</span>
-          </button>
-          <button class="slider-button slider-next" type="button">
-            <span class="visually-hidden">Следующее фото</span>
-          </button>
-          <b>Делай селфи,<br>как Бен Стиллер! </b>
-          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">Палка для селфи</span>
+              </button>
+              <img class="slider-image" src="images/slider-3 (selfie-stick).png" alt="Палка для селфи" width="560" height="560">
+              <b class="selfie-stick">Делай селфи,<br>как Бен Стиллер!</b>
+          <p class="selfie-stick">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
           </p>
-          <a class="quadrocopter-link" href="#">Подробнее</a>
+          <a class="selfie-stick-link" href="#">Подробнее</a>
           <table>
             <tr>
               <td>8,5 м</td>
@@ -124,24 +126,6 @@
               <td>Материал</td>
             </tr>
           </table>
-
-          <ol class="slider-pagination">
-            <li class="slider-pagination-item">
-              <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                <span class="visually-hidden">1 фото</span>
-              </button>
-            </li>
-
-            <li class="slider-pagination-item">
-              <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                <span class="visually-hidden">2 фото</span>
-              </button>
-            </li>
-
-            <li class="slider-pagination-item">
-              <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                <span class="visually-hidden">3 фото</span>
-              </button>
             </li>
           </ol>
         </section>
@@ -203,24 +187,24 @@
           <li class="services-item">
             <h3 class="visually-hidden">Доставка</h3>
           <button class="button" type="submit">Доставка</button>
-          <p>Мы с удовольствием доставим ваш товар прямо<br>
+          <p class="delivery">Мы с удовольствием доставим ваш товар прямо<br>
             к вашему подъезду совершенно бесплатно! Ведь<br>
             мы неплохо заработаем, поднимая его на ваш этаж.</p>
-          <img class="delivery" src="" alt="Доставка">
+          <img class="delivery" src="" alt="Доставка" width="" height="">
           </li>
         <li class="services-item">
             <h3 class="visually-hidden">Гарантия</h3>
           <button class="button" type="submit">Гарантия</button>
-          <p>Если из-за возгорания купленного у нас товара у вас<br>
+          <p class="garantee">Если из-за возгорания купленного у нас товара у вас<br>
             сгорит дом — не переживайте, мы выдадим вам новый.<br>
             Товар, не дом, конечно же.</p>
-          <img class="garantee" src="" alt="Гарантия">
+          <img class="garantee" src="" alt="Гарантия" width="" height="">
         </li>
         <li class="services-item">
             <h3 class="visually-hidden">Кредит</h3>
           <button class="button" type="submit">Кредит</button>
-          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-          <img class="credit" src="" alt="Кредит">
+          <p class="credit">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+          <img class="credit" src="" alt="Кредит" width="" height="">
         </li>
       </ul>
       </section>
@@ -234,31 +218,28 @@
 
       <section class="about-us">
         <h2 class="about-us-title">О нас</h2>
-        <p>Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.
+        <p class="about-us">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.
         </p>
-        <p>Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
+        <p class="about-us-dtlivery">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
         <ul class="about-us-list">
-          <li class="about-us-item">
-            <b>Меловые линии</b>
+          <li class="about-us-item">Меловые линии</b>
           </li>
-          <li class="about-us-item">
-            <b>СДИК</b>
+          <li class="about-us-item">СДИК</b>
           </li>
-          <li class="about-us-item">
-            <b>ТоксБерри</b>
+          <li class="about-us-item">ТоксБерри</b>
           </li>
         </ul>
         <a class="button button-about-us" href="#">Подробнее о нас</a>
       </section>
 
 
-      <section clas="contacts">
+      <section class="contacts">
         <h2 class="contacts-title">Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис.<br>
+        <p class="contacts">Вы можете забрать товар сами, заехав в наш офис.<br>
           Заодно сможете проверить работоспособность покупки. </p>
           <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
            <address class="contacts-address">
-             <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+             <p class="addres">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
              <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
             </address>
           <h3 class="contacts-subtitle">Время работы</h3>
@@ -272,24 +253,24 @@
 
       <section class="mailing">
         <h2 class="visually-hidden">Рассылка</h2>
-        <b>Подпишитесь на рассылку</b>
-        <p>Еженедельный дайджест с обзорами новинок,<br>
+        <b class="mailing">Подпишитесь на рассылку</b>
+        <p class="mailing">Еженедельный дайджест с обзорами новинок,<br>
           длительными тест-драйвами, распаковками, а также акции,<br> спецпредложения и вот это вот всё.</p>
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
          <input type="text" name="mailing-e-mail" placeholder="Ваш e-mail">
           <button class="button" type="submit">Подписаться</button>
-          <p>Это бесплатно</p>
+          <p class="free">Это бесплатно</p>
         </form>
       </section>
 
     </main>
 
     <footer class="page-footer">
-      <img class="logo" src=""  width="145" height="36" alt="Логотип интернет-магазина Девайс">
+      <img class="logo" src="images/logo.svg"  width="145" height="36" alt="Логотип интернет-магазина Девайс">
       <section class="footer-adress">
           <h2 class="visually-hidden">Адрес</h2>
           <address class="contacts-address">
-            <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+            <p class="address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
             </address>
         </section>
 
@@ -337,7 +318,7 @@
         <section class="footer-developer's-logo">
           <h2 class="visually-hidden">Логотип разработчика</h2>
           <a href=" https://htmlacademy.ru">
-            <img class="developer's-logo" src="" alt="Логотип разработчика" width="115" height="33"></a>
+            <img class="developer's-logo" src="images/logo (.html-academy).svg" alt="Логотип разработчика" width="115" height="33"></a>
         </section>
         </footer>
 
