--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -10,33 +12,43 @@
         <a class="navigation-logo">
           <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс"></a>
 
-          <ul class="navigation-user">
-        <ul class="navigation-user">
+        <ul class="navigation-list">
           <li class="navigation-item">
             <form class="navigation-form" action="https://echo.htmlacademy.ru/" method="post">
               <p class="navigation-form-search">
-                <label class="visually-hidden" for="navigation-search">Поиск</label>
-                <input type="text" id="navigation-search" name="navigation-search" placeholder="Поиск по сайту">
+                <input class="search" type="text" id="navigation-search" name="navigation-search" placeholder="Поиск по сайту">
+                <label class="visually-hidden" for="navigation-search"><button class="button" type="submit">Найти</button></label>
               </p>
-              <button class="button" type="submit">Найти</button>
             </form>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Войти</a>
+            <a class="navigation-user" href="#">Войти</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Сравнить</a>
+            <a class="navigation-user" href="#">Сравнить</a>
           </li>
           <li class="navigation-item">
             <span class="products-number">2</span>
-            <a class="navigation-link" href="basket.html">Корзина</a>
+            <a class="navigation-user" href="basket.html">Корзина</a>
           </li>
         </ul>
 
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Коталог товаров</a>
-            <div></div>
+            <div class="dropdown">
+              <button class="navigation-link" href="catalog.html">Коталог товаров</button>
+              <div class="subcatalog">
+                <span class="block-1">
+                <a class="subcatalog" href="#">Виртуальная реальность</a>
+                <a class="subcatalog" href="#">Моноподы для cелфи</a>
+                <a class="subcatalog" href="#">Экшн-камеры</a></span>
+                <span class="block-2">
+                <a class="subcatalog" href="#">Фитнес-браслеты</a>
+                <a class="subcatalog" href="#">Умные часы</a></span>
+                <span class="block-3">
+                <a class="subcatalog" href="#">Квадрокоптеры</a></span>
+              </div>
+            </div>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#services">Доставка</a>
@@ -65,36 +77,35 @@
           </button>
 
           <ol class="slider-pagination">
-            <li class="slider-pagination-item">
-              <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                <span class="visually-hidden">Квадрокоптер</span>
-              </button>
+            <div class="slider-pagination">
+              <li class="slider-pagination-item">
               <img class="slider-image" src="images/slider-1 (quadrocopter).png" alt="Квадрокоптер" width="560" height="560">
-                <b class="quadrocopter">Порхает как бабочка,<br>жалит как пчела!</b>
-          <p class="quadrocopter">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
-          </p>
-          <a class="quadrocopter-link" href="#">Подробнее</a>
-          <table>
-            <tr>
-              <td>800 м</td>
-              <td>Дальность полета</td>
-            </tr>
-            <tr>
-              <td>50 м</td>
-              <td>Радиус поражения</td>
-            </tr>
-          </table>
-            </li>
+                <span class="slider-number">01</span>
+                <b class="title">Порхает как бабочка,<br>жалит как пчела!</b>
+               <p class="text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+               </p>
+               <a class="button button-discover" href="#">Подробнее</a>
+              <table>
+                <tr>
+                 <td>800 м</td>
+                 <td>Дальность полета</td>
+                </tr>
+                <tr>
+                 <td>50 м</td>
+                 <td>Радиус поражения</td>
+                </tr>
+               </table>
+             </li>
+           </div>
 
+           <div class="slider-pagination">
             <li class="slider-pagination-item">
-              <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                <span class="visually-hidden">Фитнес-браслет</span>
-              </button>
               <img class="slider-image" src="images/slider-2 (fitness-braselet).png" alt="Фитнес-браслет" width="560" height="560">
-              <b class="fitness-bracelet">Худеем<br>правильно!</b>
-          <p class="fitness-bracelet">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+              <span class="slider-number">02</span>
+              <b class="title">Худеем<br>правильно!</b>
+          <p class="text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
           </p>
-          <a class="fitness-bracelet-link" href="#">Подробнее</a>
+          <a class="button button-discover" href="#">Подробнее</a>
           <table>
             <tr>
               <td>48 часов</td>
@@ -102,16 +113,16 @@
             </tr>
           </table>
             </li>
+          </div>
 
+            <div class="slider-pagination">
             <li class="slider-pagination-item">
-              <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                <span class="visually-hidden">Палка для селфи</span>
-              </button>
               <img class="slider-image" src="images/slider-3 (selfie-stick).png" alt="Палка для селфи" width="560" height="560">
-              <b class="selfie-stick">Делай селфи,<br>как Бен Стиллер!</b>
-          <p class="selfie-stick">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+              <span class="slider-number">03</span>
+              <b class="title">Делай селфи,<br>как Бен Стиллер!</b>
+          <p class="text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
           </p>
-          <a class="selfie-stick-link" href="#">Подробнее</a>
+          <a class="button button-discover" href="#">Подробнее</a>
           <table>
             <tr>
               <td>8,5 м</td>
@@ -127,6 +138,7 @@
             </tr>
           </table>
             </li>
+          </div>
           </ol>
         </section>
 
@@ -134,93 +146,98 @@
 
       <section class="products">
         <h2 class="visually-hidden">Продукты</h2>
-        <ul class="products-list">
-          <li class="products-item">
+          <div class="visually-hidden">
             <figure>
-            <a href="#">
-          <img class="virtual-reality" src="" alt="Виртуальная реальность" width="160" height="160"></a>
-          <figcaption>Виртуальная реальность</figcaption>
-        </figure>
-         </li>
-         <li class="products-item">
+            <a class="virtual-reality" href="#">
+            </a>
+              <figcaption>Виртуальная реальность</figcaption>
+            </figure>
+            </div>
+         <div class="visually-hidden">
           <figure>
-            <a href="monopods-for-selfies.device">
-          <img class="monopods-for-selfies" src="" alt="Моноподы для селфи" width="160" height="160"></a>
+            <a class="monopods-for-selfies" href="monopods-for-selfies.device"></a>
           <figcaption>Моноподы для селфи</figcaption>
         </figure>
-         </li>
-         <li class="products-item">
+         </div>
+         <div class="visually-hidden">
           <figure>
-            <a href="#">
-          <img class="action-cameras" src="" alt="Экшн-камеры" width="160" height="160"></a>
+            <a class="action-camera" href="#"></a>
           <figcaption>Экшн-камеры</figcaption>
         </figure>
-         </li>
-         <li class="products-item">
+         </div>
+         <div class="visually-hidden">
           <figure>
-            <a href="#">
-          <img class="fitness-bracelets" src="" alt="Фитнес-браслеты" width="160" height="160"></a>
+            <a class="fitness-braselet" href="#"></a>
           <figcaption>Фитнес-браслеты</figcaption>
         </figure>
-         </li>
-         <li class="products-item">
+         </div>
+         <div class="visually-hidden">
           <figure>
-            <a href="#">
-          <img class="smart-watches" src="" alt="Умные часы" width="160" height="160"></a>
+            <a class="smart-watches" href="#"></a>
           <figcaption>Умные часы</figcaption>
         </figure>
-         </li>
-         <li class="products-item">
+         </div>
+         <div class="visually-hidden">
           <figure>
-            <a href="#">
-          <img class="quadrocopters" src="" alt="Квадрокоптеры" width="160" height="160"></a>
+            <a class="quadrocopter" href="#"></a>
           <figcaption>Квадрокоптеры</figcaption>
         </figure>
-         </li>
-        </ul>
+         </div>
       </section>
 
-
+      <div class="services">
       <section class="services" id="services">
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="services-list">
-          <li class="services-item">
-            <h3 class="visually-hidden">Доставка</h3>
-          <button class="button" type="submit">Доставка</button>
-          <p class="delivery">Мы с удовольствием доставим ваш товар прямо<br>
+          <span class="broken-line">
+          </span>
+          <li class="services-delivery">
+            <button class="button button-discover" type="submit">Доставка</button>
+            <span class="services-delivery">
+            <h3 class="title">Доставка</h3>
+          <p class="text">Мы с удовольствием доставим ваш товар прямо<br>
             к вашему подъезду совершенно бесплатно! Ведь<br>
             мы неплохо заработаем, поднимая его на ваш этаж.</p>
-          <img class="delivery" src="" alt="Доставка" width="" height="">
+            <div class="delivery"></div>
           </li>
-        <li class="services-item">
-            <h3 class="visually-hidden">Гарантия</h3>
-          <button class="button" type="submit">Гарантия</button>
-          <p class="garantee">Если из-за возгорания купленного у нас товара у вас<br>
+        </span>
+        <li class="services-garantee">
+          <button class="button button-discover" type="submit">Гарантия</button>
+          <span class="services-garantee">
+            <h3 class="title">Гарантия</h3>
+          <p class="text">Если из-за возгорания купленного у нас товара у вас<br>
             сгорит дом — не переживайте, мы выдадим вам новый.<br>
             Товар, не дом, конечно же.</p>
-          <img class="garantee" src="" alt="Гарантия" width="" height="">
+            <div class="garantee"></div>
+          </span>
         </li>
-        <li class="services-item">
-            <h3 class="visually-hidden">Кредит</h3>
-          <button class="button" type="submit">Кредит</button>
-          <p class="credit">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-          <img class="credit" src="" alt="Кредит" width="" height="">
+        <li class="services-credit">
+          <button class="button button-discover" type="submit">Кредит</button>
+          <span class="services-credit">
+            <h3 class="title">Кредит</h3>
+          <p class="text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+          <div class="credit"></div>
+        </span>
         </li>
       </ul>
       </section>
-
+    </div>
 
       <section class="special-delivery">
         <h2 class="visually-hidden">Специальная доставка</h2>
+        <p class="shadow">
         <a class="button" href="special-delivery.html">Доставим редкий товар под заказ</a>
+      </p>
       </section>
 
-
+<div class="index-columns">
       <section class="about-us">
-        <h2 class="about-us-title">О нас</h2>
-        <p class="about-us">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.
+        <div class="broken-line">
+        </div>
+        <h2 class="title">О нас</h2>
+        <p class="text">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.
         </p>
-        <p class="about-us-dtlivery">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
+        <p class="text">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
         <ul class="about-us-list">
           <li class="about-us-item">Меловые линии</b>
           </li>
@@ -229,13 +246,15 @@
           <li class="about-us-item">ТоксБерри</b>
           </li>
         </ul>
-        <a class="button button-about-us" href="#">Подробнее о нас</a>
+        <a class="button button-discover" href="#">Подробнее о нас</a>
       </section>
 
 
       <section class="contacts">
-        <h2 class="contacts-title">Контакты</h2>
-        <p class="contacts">Вы можете забрать товар сами, заехав в наш офис.<br>
+        <div class="broken-line">
+        </div>
+        <h2 class="title">Контакты</h2>
+        <p class="text">Вы можете забрать товар сами, заехав в наш офис.<br>
           Заодно сможете проверить работоспособность покупки. </p>
           <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
            <address class="contacts-address">
@@ -247,14 +266,15 @@
             <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
            </ul>
-           <a class="button button-feedback" href="#">Напишите нам</a>
+           <a class="button button-discover" href="#">Напишите нам</a>
       </section>
+ </div>
 
 
       <section class="mailing">
         <h2 class="visually-hidden">Рассылка</h2>
-        <b class="mailing">Подпишитесь на рассылку</b>
-        <p class="mailing">Еженедельный дайджест с обзорами новинок,<br>
+        <b class="title">Подпишитесь на рассылку</b>
+        <p class="text">Еженедельный дайджест с обзорами новинок,<br>
           длительными тест-драйвами, распаковками, а также акции,<br> спецпредложения и вот это вот всё.</p>
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
          <input type="text" name="mailing-e-mail" placeholder="Ваш e-mail">
@@ -266,48 +286,53 @@
     </main>
 
     <footer class="page-footer">
-      <img class="logo" src="images/logo.svg"  width="145" height="36" alt="Логотип интернет-магазина Девайс">
+      <img class="logo" src="images/logo (yellow).svg"  width="145" height="36" alt="Логотип интернет-магазина Девайс">
       <section class="footer-adress">
           <h2 class="visually-hidden">Адрес</h2>
           <address class="contacts-address">
             <p class="address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
             </address>
+            <div class="broken-line">
+            </div>
         </section>
+
 
         <section class="footer-info">
           <h2 class="visually-hidden">Информация</h2>
           <ul class="info-list">
             <li class="info-item">
-              <a class="info-link" href="#services">Доставка</a>
+              <a class="navigation-link" href="#services">Доставка</a>
             </li>
-            <li class="navigation-item">
-              <a class="info-link" href="#services">Гарантия</a>
+            <li class="info-item">
+              <a class="navigation-link" href="#services">Гарантия</a>
             </li>
-            <li class="navigation-item">
-              <a class="info-link" href="#">Контакты</a>
+            <li class="info-item">
+              <a class="navigation-link" href="#">Контакты</a>
             </li>
           </ul>
         </section>
 
+
+
         <section class="footer-contacts-phone">
           <h2 class="visually-hidden">Контактный телефон</h2>
-          <a class="contacts-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
+          <a class="footer-contacts-phone" href="tel:+78121212">Тел.: +7 (812) 812-12-12</a>
         </section>
 
         <section class="footer-social-network">
           <h2 class="visually-hidden">Мы в соц сетях</h2>
           <ul class="social-network-list">
-            <li class="social-network-list">
+            <li class="social-network-item">
               <h3 class="visually-hidden">Telegram</h3>
           <a class="button" href="ttps://t.me/htmlacademy">
             <img class="Telegram" src="" alt="социальная сеть Telegram" width="40" height="40"></a>
             </li>
-            <li class="social-network-list">
+            <li class="social-network-item">
               <h3 class="visually-hidden">Youtube</h3>
           <a class="button" href="https://www.youtube.com/user/htmlacademyru">
             <img class="Youtube" src="" alt="социальная сеть Youtube" width="40" height="40"></a>
             </li>
-            <li class="social-network-list">
+            <li class="social-network-item">
               <h3 class="visually-hidden">Twitter</h3>
           <a class="button" href=" https://twitter.com/htmlacademy_ru">
             <img class="Twitter" src="" alt="социальная сеть Twitter" width="40" height="40"></a>
