created styles.css update index.html update catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
     <main class="main-inner">
       <header class="inner-header">
         <h1 class="title">Моноподы для селфи</h1>
-        <ul class="breadcrumbs">
+        <ul class="breadcrumbs-list">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">Главная</a>
           </li>
