--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
                 <span class="block-1">
                 <a class="subcatalog" href="#">Виртуальная реальность</a>
                 <a class="subcatalog" href="#">Моноподы для cелфи</a>
-                <a class="subcatalog" href="#">Экшн-камеры</a></span>
+                <a class="subcatalog" href="#">Экшн-камеры</a>
+                </span>
                 <span class="block-2">
                 <a class="subcatalog" href="#">Фитнес-браслеты</a>
-                <a class="subcatalog" href="#">Умные часы</a></span>
+                <a class="subcatalog" href="#">Умные часы</a>
+                </span>
                 <span class="block-3">
-                <a class="subcatalog" href="#">Квадрокоптеры</a></span>
+                <a class="subcatalog" href="#">Квадрокоптеры</a>
+                </span>
               </div>
             </div>
           </li>
@@ -84,15 +87,15 @@
                 <b class="title">Порхает как бабочка,<br>жалит как пчела!</b>
                <p class="text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
                </p>
-               <a class="button button-discover" href="#">Подробнее</a>
-              <table>
-                <tr>
-                 <td>800 м</td>
-                 <td>Дальность полета</td>
+               <a class="button button-discover" href="#"><span class="button-discover__text">Подробнее</span></a>
+              <table class="table">
+                <tr class="row-1">
+                 <td class="column-1">800 м</td>
+                 <td class="column-2">Дальность полета</td>
                 </tr>
-                <tr>
-                 <td>50 м</td>
-                 <td>Радиус поражения</td>
+                <tr class="row-2">
+                 <td class="column-1">50 м</td>
+                 <td class="column-2">Радиус поражения</td>
                 </tr>
                </table>
              </li>
@@ -105,11 +108,11 @@
               <b class="title">Худеем<br>правильно!</b>
           <p class="text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
           </p>
-          <a class="button button-discover" href="#">Подробнее</a>
-          <table>
-            <tr>
-              <td>48 часов</td>
-              <td>Без подзарядки</td>
+          <a class="button button-discover" href="#"><span class="button-discover__text">Подробнее</span></a>
+          <table class="table">
+            <tr class="row-1">
+              <td class="column-1">48 часов</td>
+              <td class="column-2">Без подзарядки</td>
             </tr>
           </table>
             </li>
@@ -122,19 +125,19 @@
               <b class="title">Делай селфи,<br>как Бен Стиллер!</b>
           <p class="text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
           </p>
-          <a class="button button-discover" href="#">Подробнее</a>
-          <table>
-            <tr>
-              <td>8,5 м</td>
-              <td>Длина палки</td>
+          <a class="button button-discover" href="#"><span class="button-discover__text">Подробнее</span></a>
+          <table class="table">
+            <tr class="row-1">
+              <td class="column-1">8,5 м</td>
+              <td class="column-2">Длина палки</td>
             </tr>
-            <tr>
-              <td>5 кг</td>
-              <td>Вес палки</td>
+            <tr class="row-2">
+              <td class="column-1">5 кг</td>
+              <td class="column-2">Вес палки</td>
             </tr>
-            <tr>
-              <td>Карбон</td>
-              <td>Материал</td>
+            <tr class="row-3">
+              <td class="column-1">Карбон</td>
+              <td class="column-2">Материал</td>
             </tr>
           </table>
             </li>
@@ -144,44 +147,43 @@
 
 
 
-      <section class="products">
+      <section class="oll-our-products">
         <h2 class="visually-hidden">Продукты</h2>
-          <div class="visually-hidden">
-            <figure>
-            <a class="virtual-reality" href="#">
+          <div class="oll-products">
+            <a href="#" class="oll-products">
+              <div class="products"><img class="products-images" src="images/Vector (virtual-reality).svg" alt="Виртуальная реальность" width="96.95px" height="54.99px"></div>
+               <span class="products-text">Виртуальная реальность</span>
             </a>
-              <figcaption>Виртуальная реальность</figcaption>
-            </figure>
-            </div>
-         <div class="visually-hidden">
-          <figure>
-            <a class="monopods-for-selfies" href="monopods-for-selfies.device"></a>
-          <figcaption>Моноподы для селфи</figcaption>
-        </figure>
+          </div>
+          <div class="oll-products">
+            <a class="oll-products" href="monopods-for-selfies.device">
+              <div class="products"><img class="products-images" src="images/Vector (mopods-for-selfies).svg" alt="Моноподы для селфи" width="85.87px" height="117px"></div>
+            <span class="products-text">Моноподы для селфи</span>
+          </a>
          </div>
-         <div class="visually-hidden">
-          <figure>
-            <a class="action-camera" href="#"></a>
-          <figcaption>Экшн-камеры</figcaption>
-        </figure>
+         <div class="oll-products">
+            <a class="oll-products" href="#">
+              <div class="products"><img class="products-images" src="images/Vector (action-cameras).svg" alt="Экшн-камеры" width="71.02px" height="87px"></div>
+            <span class="products-text">Экшн-камеры</span>
+          </a>
          </div>
-         <div class="visually-hidden">
-          <figure>
-            <a class="fitness-braselet" href="#"></a>
-          <figcaption>Фитнес-браслеты</figcaption>
-        </figure>
+         <div class="oll-products">
+            <a class="oll-products" href="#">
+              <div class="products"><img class="products-images" src="images/Vector (fitness-braselets).svg" alt="Фитнес-браслеты" width="107.31px" height="64.99px"></div>
+            <span class="products-text">Фитнес-браслеты</span>
+          </a>
          </div>
-         <div class="visually-hidden">
-          <figure>
-            <a class="smart-watches" href="#"></a>
-          <figcaption>Умные часы</figcaption>
-        </figure>
+         <div class="oll-products">
+            <a class="oll-products" href="#">
+              <div class="products"><img class="products-images" src="images/Vector (smart-watches).svg" alt="Умные часы" width="56.01px" height="97.98px"></div>
+            <span class="products-text">Умные часы</span>
+            </a>
          </div>
-         <div class="visually-hidden">
-          <figure>
-            <a class="quadrocopter" href="#"></a>
-          <figcaption>Квадрокоптеры</figcaption>
-        </figure>
+         <div class="oll-products">
+            <a class="oll-products" href="#">
+              <div class="products"><img class="products-images" src="images/Vector (quadrocopters).svg" alt="Квадрокоптеры" width="132.03px" height="69.01px"></div>
+            <span class="products-text">Квадрокоптеры</span>
+          </a>
          </div>
       </section>
 
@@ -192,7 +194,7 @@
           <span class="broken-line">
           </span>
           <li class="services-delivery">
-            <button class="button button-discover" type="submit">Доставка</button>
+            <button class="button button-discover" type="submit"><span class="button-discover__text">Доставка</span></button>
             <span class="services-delivery">
             <h3 class="title">Доставка</h3>
           <p class="text">Мы с удовольствием доставим ваш товар прямо<br>
@@ -202,7 +204,7 @@
           </li>
         </span>
         <li class="services-garantee">
-          <button class="button button-discover" type="submit">Гарантия</button>
+          <button class="button button-discover" type="submit"><span class="button-discover__text">Гарантия</span></button>
           <span class="services-garantee">
             <h3 class="title">Гарантия</h3>
           <p class="text">Если из-за возгорания купленного у нас товара у вас<br>
@@ -212,7 +214,7 @@
           </span>
         </li>
         <li class="services-credit">
-          <button class="button button-discover" type="submit">Кредит</button>
+          <button class="button button-discover" type="submit"><span class="button-discover__text">Кредит</span></button>
           <span class="services-credit">
             <h3 class="title">Кредит</h3>
           <p class="text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
@@ -225,9 +227,11 @@
 
       <section class="special-delivery">
         <h2 class="visually-hidden">Специальная доставка</h2>
-        <p class="shadow">
-        <a class="button" href="special-delivery.html">Доставим редкий товар под заказ</a>
-      </p>
+        <a class="special-delivery__button" href="special-delivery.html">
+          <div class="special-delivery__car"> <img class="delivery__car" src="images/icon (delivery-auto).svg" alt="грузовая доставка" width="47px" height="31px"> </div>
+          <div class="special-delivery__text">Доставим редкий товар под заказ</div>
+          <div class="special-delivery__inform"><img class="delivery__inform" src="images/icon (i).svg" alt="информация по доставке" width="2px" height="12px"></div>
+        </a>
       </section>
 
 <div class="index-columns">
@@ -246,7 +250,7 @@
           <li class="about-us-item">ТоксБерри</b>
           </li>
         </ul>
-        <a class="button button-discover" href="#">Подробнее о нас</a>
+        <a class="button button-discover" href="#"><span class="button-discover__text">Подробнее о нас</span></a>
       </section>
 
 
@@ -266,7 +270,7 @@
             <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
            </ul>
-           <a class="button button-discover" href="#">Напишите нам</a>
+           <a class="button button-discover" href="#"><span class="button-discover__text">Напишите нам</a>
       </section>
  </div>
 
